add privacy policy and update terms of use

--- a/termsOfUse.html
+++ b/termsOfUse.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Terms of Use for Google Task Express</title>
+    <title>Terms of Use for G Task Express</title>
 </head>
+
 <body>
 
-<h1>Terms of Use for Google Task Express</h1>
+<h1>Terms of Use for G Task Express</h1>
 
 <p>
     Effective Date: May 21, 2024
 </p>
 
 <p>
-    Thank you for choosing to use Google Task Express ("Plugin"), a Google Chrome extension developed by Xueliang Zhang
+    Thank you for choosing to use G Task Express ("Plugin"), a Google Chrome extension developed by Xueliang Zhang
     ("I", "me", or "my"). This Plugin enables users to interact with Google Tasks API to create tasks through the
     right-click menu and plugin popup. By installing and using this Plugin, you agree to be bound by these Terms of Use.
     If you do not agree with any part of these Terms, you should discontinue the installation and use of the Plugin.
@@ -22,6 +24,7 @@
 <h3>
     1. Acceptance of Terms
 </h3>
+
 <p>
     By using this Plugin, you signify your agreement to these Terms of Use. If you disagree with any part of the terms
     then you do not have permission to access the Plugin.
@@ -30,6 +33,7 @@
 <h3>
     2. Plugin Use
 </h3>
+
 <p>
     This Plugin is provided to help you manage tasks through the Google Tasks API via Google Chrome. You must use the
     Plugin in compliance with all applicable laws and regulations, and you must not use it in a way that causes harm to
@@ -39,6 +43,7 @@
 <h3>
     3. No Warranty
 </h3>
+
 <p>
     This Plugin is provided on an "as is" and "as available" basis, without any warranties of any kind, either express
     or implied. I make no warranties or representations of any kind concerning the accuracy, likely results, or
@@ -49,6 +54,7 @@
 <h3>
     4. Limitation of Liability
 </h3>
+
 <p>
     In no event will I be liable for any damages (including, without limitation, damages for loss of data or profit, or
     due to business interruption) arising out of the use or inability to use the Plugin, even if I have been notified
@@ -58,6 +64,7 @@
 <h3>
     5. Changes to Terms of Use
 </h3>
+
 <p>
     I reserve the right, at my discretion, to modify or replace these Terms at any time. What constitutes a material
     change will be determined at my sole discretion.
@@ -66,13 +73,16 @@
 <h3>
     6. Termination
 </h3>
+
 <p>
     I may terminate or suspend your access to the Plugin immediately, without prior notice or liability, for any reason
     whatsoever, including without limitation if you breach the Terms.
 </p>
+
 <h3>
     7. Governing Law
 </h3>
+
 <p>
     These Terms shall be governed and construed in accordance with the laws of Massachusetts, United States without
     regard to its conflict of law provisions.
@@ -81,6 +91,7 @@
 <h3>
     8. Contact
 </h3>
+
 <p>
     If you have any questions about these Terms, please contact me at xuezha2025@gmail.com.
 </p>
@@ -91,4 +102,5 @@
 </p>
 
 </body>
+
 </html>
