update home page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>G Task Express</title>
 </head>
 <body>
-<a href="privacyPolicy.html">Privacy Policy</a>
-<a href="termsOfUse.html">Terms of Use</a>
+<h1>Welcome to G Task Express</h1>
+<div>
+    <a href="privacyPolicy.html">Privacy Policy</a>
+</div>
+<div>
+    <a href="termsOfUse.html">Terms of Use</a>
+</div>
 </body>
 </html>
