--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <title>G Task Express</title>
 </head>
 <body>
-<h1>Welcome to G Task Express</h1>
-<div>
+
+<h1>G Task Express</h1>
+
+<p>
     <a href="privacyPolicy.html">Privacy Policy</a>
-</div>
-<div>
+</p>
+
+<p>
     <a href="termsOfUse.html">Terms of Use</a>
-</div>
+</p>
+
+<p>
+    <a href="https://buymeacoffee.com/xuezha" target="_blank">Enjoy the plugin? A &#9749; helps me keep going!</a>
+</p>
+
 </body>
+
 </html>
