--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<h1>Terms of Use for G Task Express</h1>
+<h1>Privacy Policy for G Task Express</h1>
 
 <p>
     Effective Date: May 21, 2024
