update the email address and the coffee link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-    <a href="https://buymeacoffee.com/xuezha" target="_blank">Enjoy the plugin? A &#9749; helps me keep going!</a>
+    <a href="https://buymeacoffee.com/gtaskexpress" target="_blank">Enjoy the plugin? A &#9749; helps me keep going!</a>
 </p>
 
 </body>
