--- a/termsOfUse.html
+++ b/termsOfUse.html
@@ -15,8 +15,8 @@
 </p>
 
 <p>
-    Thank you for choosing to use G Task Express ("Plugin"), a Google Chrome extension developed by Xueliang Zhang
-    ("I", "me", or "my"). This Plugin enables users to interact with Google Tasks API to create tasks through the
+    Thank you for choosing to use G Task Express ("Plugin"), a Google Chrome extension developed by G Task Express team
+    ("we," "us," or "our"). This Plugin enables users to interact with Google Tasks API to create tasks through the
     right-click menu and plugin popup. By installing and using this Plugin, you agree to be bound by these Terms of Use.
     If you do not agree with any part of these Terms, you should discontinue the installation and use of the Plugin.
 </p>
@@ -46,7 +46,7 @@
 
 <p>
     This Plugin is provided on an "as is" and "as available" basis, without any warranties of any kind, either express
-    or implied. I make no warranties or representations of any kind concerning the accuracy, likely results, or
+    or implied. We make no warranties or representations of any kind concerning the accuracy, likely results, or
     reliability of the use of the materials in this Plugin or otherwise relating to such materials or on any sites
     linked to this Plugin.
 </p>
@@ -56,8 +56,8 @@
 </h3>
 
 <p>
-    In no event will I be liable for any damages (including, without limitation, damages for loss of data or profit, or
-    due to business interruption) arising out of the use or inability to use the Plugin, even if I have been notified
+    In no event will we be liable for any damages (including, without limitation, damages for loss of data or profit, or
+    due to business interruption) arising out of the use or inability to use the Plugin, even if we have been notified
     orally or in writing of the possibility of such damage.
 </p>
 
@@ -66,8 +66,8 @@
 </h3>
 
 <p>
-    I reserve the right, at my discretion, to modify or replace these Terms at any time. What constitutes a material
-    change will be determined at my sole discretion.
+    We reserve the right, at our discretion, to modify or replace these Terms at any time. What constitutes a material
+    change will be determined at our sole discretion.
 </p>
 
 <h3>
@@ -75,7 +75,7 @@
 </h3>
 
 <p>
-    I may terminate or suspend your access to the Plugin immediately, without prior notice or liability, for any reason
+    We may terminate or suspend your access to the Plugin immediately, without prior notice or liability, for any reason
     whatsoever, including without limitation if you breach the Terms.
 </p>
 
@@ -93,7 +93,7 @@
 </h3>
 
 <p>
-    If you have any questions about these Terms, please contact me at xuezha2025@gmail.com.
+    If you have any questions about these Terms, please contact us at gtaskexpress@gmail.com.
 </p>
 
 <p>
