--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -94,7 +94,7 @@
 
 <p>
     If you have any questions about this Privacy Policy or our data practices, please contact us at
-    xuezha2025@gmail.com.
+    gtaskexpress@gmail.com.
 </p>
 
 </body>
